# NaimCo

./: .gitignore  README.md  README.rst  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  python-pack.yml
api_sniffing/: nvm_commands.txt  nvm_replies.txt  pcap_extract.py  sniffing.md  sniffing.rst
naimco/: __init__.py  connection.py  controllers.py  core.py  msg_processing.py
scripts/: naim_control.py  radio_on.py  run1.py
